# learnopengl

./: .gitignore  CMakeLists.txt  README.md
shaders/: blinn_phong.frag  gouraud.frag  gouraud.vert  shader.frag  shader.vert
src/: camera.cpp  camera.h  main.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h
src/materials/: gold.cpp  pearl.cpp
src/shaders/: blinn_phong.frag  light_source.frag  shader.vert
